# feifei-proxy-mcp

./: Dockerfile  README.md  docker-compose-example.yml  pyproject.toml
src/feifei_proxy_mcp/: __init__.py  __main__.py  enums.py  logger.py  mcp_client_manager.py  mcp_exception.py  server.py
src/tests/: test_mcp.py
